--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li></li>
+        </ul>
+        <h3>Icebreakers</h3>
+      </nav>
+    </header>
 
   </body>
 </html>
